# fraud-ring-investigator-arena

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  eval.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  task_bank.py  tasks.py
baselines/: __init__.py  heuristics.py
server/: __init__.py  app.py  environment.py  fraud_ring_investigator_arena_environment.py  graders.py  scoring.py  simulator.py
