[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-ring-investigator-arena"
version = "0.1.0"
description = "An OpenEnv benchmark for RL-native fraud ring investigation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.50.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["client", "models", "eval", "inference", "task_bank"]

[tool.setuptools.packages.find]
include = ["server", "baselines"]
