[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-ring-investigator-arena"
version = "0.1.0"
description = "An OpenEnv benchmark for RL-native fraud ring investigation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.50.0",
  "openenv-core>=0.2.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
server = "fraud_ring_investigator_arena.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
  "fraud_ring_investigator_arena",
  "fraud_ring_investigator_arena.server",
  "fraud_ring_investigator_arena.baselines",
]

[tool.setuptools.package-dir]
fraud_ring_investigator_arena = "."
"fraud_ring_investigator_arena.server" = "server"
"fraud_ring_investigator_arena.baselines" = "baselines"

[tool.setuptools.package-data]
fraud_ring_investigator_arena = ["openenv.yaml", "README.md"]
